# hoyomi

./: .gitignore  Cargo.toml
.github/workflows/: build-test-lint.yml
src/: client.rs  config.rs  logic.rs  main.rs
