[package]
name = "hoyomi"
version = "0.1.0"
authors = ["alanb <efik722life@gmail.com>"]
description = "CLI tool for cloud resources management"
edition = "2018"
license = "MIT"

[dependencies]
termion = "1.5.3"
rusoto_core = "0.40.0"
rusoto_ec2 = "0.40.0"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
dirs = "2.0.2"
